// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chart config selector should match snapshot 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-6"
  >
    <form>
      <div
        class="MuiBox-root MuiBox-root-7 makeStyles-tabContainer-3"
      >
        <div
          class="MuiTabs-root"
        >
          <div
            class="MuiTabs-scroller MuiTabs-fixed"
            style="overflow: hidden;"
          >
            <div
              aria-label="disabled tabs example"
              class="MuiTabs-flexContainer"
              role="tablist"
            >
              <button
                aria-selected="true"
                class="MuiButtonBase-root MuiTab-root makeStyles-tabRoot-4 MuiTab-textColorInherit Mui-selected"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  Data
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              class="PrivateTabIndicator-root-8 PrivateTabIndicator-colorPrimary-9 MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-12 makeStyles-container-2"
      >
        <div
          class="MuiBox-root MuiBox-root-13"
        >
          <div
            class="MuiBox-root MuiBox-root-14"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2"
            >
              Chart Name
            </h6>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root makeStyles-textFieldRoot-5"
            data-testid="chartName"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
              data-shrink="true"
              for="chartName"
              id="chartName-label"
            >
              Add chart name
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiFilledInput-input"
                id="chartName"
                name="chartName"
                type="text"
                value="Untitled Chart"
              />
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="MuiBox-root MuiBox-root-15"
        >
          <div
            class="MuiBox-root MuiBox-root-22"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2"
            >
              Data Source
            </h6>
          </div>
          <div
            class="MuiFormControl-root makeStyles-formControl-30"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
              data-shrink="false"
              id="dropdown-label"
            >
              select data source
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
              data-testid="dropdown-dataSources"
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="dropdown-label dropdown-dataSources"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
                id="dropdown-dataSources"
                role="button"
                tabindex="0"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconFilled"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        
        <div
          class="MuiBox-root MuiBox-root-18 makeStyles-footer-1"
        >
          <hr
            class="MuiDivider-root"
          />
          <div
            class="MuiBox-root MuiBox-root-19"
          >
            <div
              class="MuiBox-root MuiBox-root-21 makeStyles-buttonGroup-20"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Back to chart type
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall Mui-disabled Mui-disabled"
                disabled=""
                tabindex="-1"
                type="submit"
              >
                <span
                  class="MuiButton-label"
                >
                  Apply
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`chart config selector should match snapshot in edit moed 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-40"
  >
    <form>
      <div
        class="MuiBox-root MuiBox-root-41 makeStyles-tabContainer-37"
      >
        <div
          class="MuiTabs-root"
        >
          <div
            class="MuiTabs-scroller MuiTabs-fixed"
            style="overflow: hidden;"
          >
            <div
              aria-label="disabled tabs example"
              class="MuiTabs-flexContainer"
              role="tablist"
            >
              <button
                aria-selected="true"
                class="MuiButtonBase-root MuiTab-root makeStyles-tabRoot-38 MuiTab-textColorInherit Mui-selected"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiTab-wrapper"
                >
                  Data
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              class="PrivateTabIndicator-root-42 PrivateTabIndicator-colorPrimary-43 MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-46 makeStyles-container-36"
      >
        <div
          class="MuiBox-root MuiBox-root-47"
        >
          <div
            class="MuiBox-root MuiBox-root-48"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2"
            >
              Chart Name
            </h6>
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root makeStyles-textFieldRoot-39"
            data-testid="chartName"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
              data-shrink="true"
              for="chartName"
              id="chartName-label"
            >
              Add chart name
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiFilledInput-input"
                id="chartName"
                name="chartName"
                type="text"
                value="chart1"
              />
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="MuiBox-root MuiBox-root-49"
        >
          <div
            class="MuiBox-root MuiBox-root-56"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2"
            >
              Data Source
            </h6>
          </div>
          <div
            class="MuiFormControl-root makeStyles-formControl-64"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
              data-shrink="false"
              id="dropdown-label"
            >
              select data source
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline Mui-disabled Mui-disabled MuiInputBase-formControl"
              data-testid="dropdown-dataSources"
            >
              <div
                aria-disabled="true"
                aria-haspopup="listbox"
                aria-labelledby="dropdown-label dropdown-dataSources"
                class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input Mui-disabled Mui-disabled Mui-disabled"
                id="dropdown-dataSources"
                role="button"
              >
                <span>
                  ​
                </span>
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput"
                tabindex="-1"
                value=""
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconFilled Mui-disabled"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        
        <div
          class="MuiBox-root MuiBox-root-52 makeStyles-footer-35"
        >
          <hr
            class="MuiDivider-root"
          />
          <div
            class="MuiBox-root MuiBox-root-53"
          >
            <div
              class="MuiBox-root MuiBox-root-55 makeStyles-buttonGroup-54"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall Mui-disabled Mui-disabled"
                disabled=""
                tabindex="-1"
                type="submit"
              >
                <span
                  class="MuiButton-label"
                >
                  Apply
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
